<resources>
    <string name="app_name">Turismo Valledupar</string>
    <string name="Valledupar">Valledupar, uno de los lugares más coloridos y llenos de alegría de la costa, su gente y riqueza cultural nos permite disfrutar de muchos lugares realmente memorables</string>
    <string name="ubicacionx"> ¿Donde estoy?</string>
    <string name="marker_detail_latlng">(%1$.2f, %2$.2f)</string>
    <string name="eventos">Eventos</string>
    <string name="hacer">Que hacer?</string>
    <string name="visitar">Que visitar</string>
    <string name="recreacion">Recreacion</string>
    <string name="region">Region</string>
    <string name="fiestas">nocturno</string>
    <string name="iniciarSesion">Iniciar sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="cuenta">Ya tengo una cuenta</string>
    <string name="textUsuario">Escribe tu usuario</string>
    <string name="textClave">Escribe tu contraseña</string>
    <string name="textClave2">Escribe tu contraseña nueva</string>
    <string name="textCorreo">Escribe tu correo</string>
    <string name="olvidoPass">¿Olvido su contraseña?</string>
    <string name="cambiarClave">Cambiar clave</string>
    <string name="pruebaAtanques" translatable="false">Es el principal asentamiento de la etnia Kankuama, ubicada en medio de los ríos Chiscuinlla y Candela. Sus calles empedradas cruzan pequeños cerros y forman hileras de caminos que se comunican entre sí.</string>
    <string name="laMina">N.º 1 de 6 Actividades al aire libre en Valledupar Actividades al aire libre, Más actividades al aire libre</string>
    <string name="natacion">Natacion</string>
    <string name="parques">Parques</string>
    <string name="monumentos">Monumentos</string>
    <string name="sitios">Sitios insignes</string>
    <string name="valle">Yo amo Valledupar</string>
    <string name="valledupar">La estrategia Yo Amo a Valledupar, lleva a los vallenatos a internalizar en el corazón el sentido de pertenencia por una ciudad, bella, acogedora, cultural y musical; pero no es amar a Valledupar, es demostrarlo, con cultura ciudadana, con cuidado y limpieza, hablando bien de ella y de su gente. Con amor verdadero por esta tierra llena encanto, que queremos ver en paz.</string>
    <string name="poporos">Los poporos</string>
    <string name="poporos2">El Coliseo es uno de los pocos que cuenta con un techo movible. Construido a finales de los años 90s, se encuentra frente a la escultura de Los Poporos. Esta escultura rinde homenaje a las tres etnias indígenas que aún habitan en la Sierra Nevada, como lo son los Arhuacos, los Koguis y los Arzarios.</string>
    <string name="ecce">Santo Ecce Homo</string>
    <string name="ecce2">El Santo Ecce Homo es el patrono de Valledupar. Una réplica de 30 metros, que vigila la ciudad desde el Cerro de las Antenas, es lugar de peregrinaje para devotos y meta para deportistas. Fue diseñada por el maestro colombiano Héctor Lombana, la estructura mide 35 metros de altura.</string>
    <string name="cacique">Cacique Upar</string>
    <string name="cacique2">Al sur este de la ciudad se levanta imponente El Cacique Upar, una hermosa escultura representativa de nuestros aborígenes indígenas quienes defendieron esta región de los invasores españoles. Curiosamente, a él se debe el nombre de nuestra ciudad, pues Valledupar es un acrónimo de: Valle del Cacique Upar. Él era el máximo jefe de los Chimilas, tribu de la región y quienes tuvieron que desplazarse a la sierra Nevada para evitar su exterminio total.</string>
    <string name="plaza">Plaza Alfonso Lopez</string>
    <string name="plaza2">Es la Plaza fundacional de la ciudad. Sede de la famosa Tarima Francisco el hombre y cuna del Festival de la leyenda vallenata, que se celebró allí por varias décadas hasta que fue insuficiente para alojar a los turistas que nos visitaban. Al recorrer las casas que la rodean podrás conocer la historia de la ciudad, leyendo las placas en cada una de ellas. Sus lozas, desde lo alto, representan los caminos de la vida de la cosmogonía arhuaca. Actualmente está siendo remodelada por la alcaldía municipal.</string>
    <string name="loperena">Colegio Loperena</string>
    <string name="loperena2">Fue creado como homenaje a la memoria de la heroína vallenata Doña María Concepción Loperena de Fernández de Castro, quien prestó servicios invaluables a la independencia de la República. Reconocida como el "Alma mater del Cesar" por haber formado en sus aulas a la mayoría de los dirigentes del Departamento en el siglo XX. En 1993, las instalaciones del Colegio Nacional Loperena fueron declaradas Monumento Nacional de Colombia.
Se necesita un permiso especial para entrar desde las 8:00 hasta las 18:00 horas.</string>
    <string name="mayo">Plaza primero de Mayo</string>
    <string name="mayo2">Es un parque donde se puede disfrutar, divertirse y jugar. Es un atractivo para niños y adultos por igual. Aquí se hacen conciertos ya que cuenta con una tarima amplia y un gran espacio. Además, allí se encuentra el monumento de las guitarras. Este fue instalado el 8 de febrero de 2009 y son un homenaje a las fiestas del barrio que inician justamente el día después de finalizar el festival vallenato.
Espacio público.</string>
    <string name="gobernacion">Gobernacion del Cesar</string>
    <string name="gobernacion2">La plaza cuenta con un parque de banderas que tiene 27 astas de 27 metros de altura en las que ondean las banderas de cada uno de los municipios del departamento del Cesar y la de Colombia. Esta recién reformada plaza es un espacio verde de esparcimiento que cuenta con varios monumentos que representan la idiosincrasia de la región.Espacio público.</string>
    <string name="helado">Parque de la provincia</string>
    <string name="helado2">Lugar en donde se le rinde homenaje a Carlos Vives como embajador de nuestra cultura y folclor, quien también es el padrino de este bello lugar. Estará ubicado en donde está hoy el parque del Helado. Estará conectado a la glorieta de los Juglares y tendrá fuentes de agua. El avión DC6, parqueado allí para el disfrute de los niños, se convertirá en un museo de la vida y obra de este gran artista.Espacio público.</string>
    <string name="leyenda">Parque de la leyenda vallenata</string>
    <string name="leyenda2">Es un conjunto arquitectónico con una extensión de 23 hectáreas, ubicado al norte de la ciudad de Valledupar, en la margen derecha del río Guatapurí. Desde 2004 se realiza aquí el Festival Vallenato. Es un sitio ecológico, cultural, turístico y recreativo rodeado de arbustos donde se encuentra la tarima Compae Chipuco del Coliseo Cacique Upar, con una capacidad para 40.000 espectadores. Es quizás el mejor sitio para conciertos del país.Entrada gratuita a todo público de 8:00 hasta las 18:00 horas</string>
    <string name="novalito">Parque Novalito</string>
    <string name="novalito2">Lugar de esparcimiento al norte de la ciudad, cuenta con zona WIFI y ciclo ruta. Es sede de muchos campeonatos empresariales de Micro-Fútbol. Es un buen lugar para descansar y adentrarse en el Centro Histórico de la ciudad. Se encuentra en pleno corazón de uno de los barrios más tradicionales del imaginario cultural vallenato, del cual toma su nombre.Espacio público.</string>
    <string name="cortijos">Parque los Cortijos</string>
    <string name="cortijos2">Lugar de esparcimiento que cuenta con canchas de tenis, Voley playa, futbol sintético, parque bio-saludable, canchas de baloncesto y multifuncional. También tiene amplios espacios verdes para deleitarse en frescas sombras. Este paisaje de sol que siempre baña la ciudad, atrae a muchos visitantes al parque todo el tiempo.Espacio público.</string>
    <string name="candelaria">Fiesta Patronal de la Candelaria</string>
    <string name="candelaria2">Este festival toma lugar durante el mes de febrero, en el municipio de Becerril.Estas fiestas además de tener carácter religioso, también tiene otras manifestaciones populares, como bailes, casetas populares, concurso de danzas folclóricas, recreación dirigida para los niños y además la renombrada “Mudanza”, que era la manera de cambiar de lugar de residencia, llevándose la casa de palma de un lugar a otro en los tiempos antiguos, lo cual era todo un acontecimiento.</string>
    <string name="SanJuan">Patronal de San Juan Bosco</string>
    <string name="SanJuan2">Celebración y veneración al santo patrono del municipio de Bosconia, San Juan Bosco.El 31 de enero comienza con alborada musical.</string>
    <string name="acordeon">Festival Mi Pedazo de Acordeón</string>
    <string name="acordeon2">Se celebra en el municipio de El Paso. La junta organizadora de este festival creó este evento para rendir homenaje cada año al compositor y músico que nadie olvida: Alejandro Durán.</string>
    <string name="ganadera">Feria ganadera de Valledupar</string>
    <string name="ganadera2">Se celebra generalmente en el mes de agosto. Cesar es considerada una región eminentemente agrícola y ganadera.</string>
    <string name="festival">Festival de la leyenda Vallenata</string>
    <string name="festival2">El Festival de la Leyenda Vallenata se celebra en la ciudad de Valledupar generalmente durante el mes de abril.</string>
    <string name="cafe">Festival del Café y de la Mochila Arhuaca</string>
    <string name="cafe2">Se celebra en el municipio de Pueblo Bello en el mes de julio.</string>
    <string name="candefiesta">Nuestra Señora de la Candelaria</string>
    <string name="juanfiesta">San Juan Bosco</string>
    <string name="maratana">El establecimiento sirve un desayuno buffet.\n
La zona es ideal para practicar ciclismo. El Hotel Maranata Valledupar ofrece servicio de alquiler de coches.\n
El hotel alberga un centro de negocios y máquinas expendedoras de bebidas y aperitivos.\n
El Hotel Maranata Valledupar se encuentra a 5 km del aeropuerto Alfonso López Pumarejo, el más cercano. Se ofrece servicio de enlace con el aeropuerto por un suplemento.</string>
    <string name="sonesta">Este hotel moderno se encuentra a 4 km de la Plaza Alfonso López y cuenta con vistas panorámicas a la Sierra Nevada de Santa Marta. Hay WiFi gratuita y aparcamiento gratuito.\n
Las habitaciones del Sonesta Valledupar, de 5 estrellas, son amplias y tienen aire acondicionado, TV por cable, teléfono, minibar, tonos neutros, ventanas amplias y escritorio con silla ergonómica.\n
   El Sonesta Valledupar cuenta con zona de fitness y recepción abierta las 24 horas </string>
    <string name="tativan">Este hotel ofrece una piscina al aire libre, una terraza, un bar, un restaurante, un desayuno bufé, conexión Wi-Fi gratuita, 7 salas de conferencias y un centro de negocios.\n
Las habitaciones y suites del Hotel Tativan tienen baño privado, zona de estar, minibar y TV por cable. Además, hay un servicio de habitaciones.\n
La Sierra Restaurant ofrece platos nacionales e internacionales.\n En Los Junglares Bar podrá tomar una copa y un aperitivo.</string>
    <string name="mayales">El Hotel Mayales Plaza ofrece alojamiento con aire acondicionado en Valledupar.\n El establecimiento cuenta con restaurante, recepción 24 horas, servicio de habitaciones y WiFi gratuita en todas las instalaciones.\n El hotel dispone de habitaciones familiares.\n
Las habitaciones están equipadas con armario, TV de pantalla plana y baño privado.\n
El Hotel Mayales Plaza sirve un desayuno americano todas las mañanas.\n
El alojamiento dispone de terraza.\n
El Hotel Mayales Plaza ofrece servicio gratuito de enlace con el aeropuerto Alfonso López Pumarejo, situado a 6 km.</string>
</resources>