<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Turismo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/goterena"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/region"
        android:textColor="#ffff"
        app:layout_constraintBottom_toTopOf="@+id/fiestas"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/hacer"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/boton_redondo"
        android:onClick="queHacer"
        android:text="@string/hacer"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Eventos"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_redondo"
        android:onClick="eventos"
        android:text="@string/eventos"
        android:textColor="#ffff"
        app:layout_constraintBottom_toTopOf="@+id/hacer"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logear"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/boton_redondo"
        android:gravity="center"
        android:onClick="login"
        android:text="@string/iniciarSesion"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

     <Button
        android:id="@+id/fiestas"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/fiestas"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/centros"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/recreacion"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fiestas"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/hacer"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/turismo"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_redondo"
        android:onClick="visitar"
        android:text="@string/visitar"
        android:textColor="#ffff"
        app:layout_constraintBottom_toTopOf="@+id/centros"
        app:layout_constraintEnd_toStartOf="@+id/region"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/Eventos"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>