<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/campo"
    tools:context=".EventosRegion">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/candelaria"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:background="@drawable/transparente"
                android:onClick="candelaria"
                android:text="@string/candelaria"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="88dp" />

            <Button
                android:id="@+id/sanJuan"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/transparente"
                android:text="@string/SanJuan"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="88dp" />

            <Button
                android:id="@+id/acordeon"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/transparente"
                android:text="@string/acordeon"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="88dp" />

            <Button
                android:id="@+id/leyenda"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/transparente"
                android:text="@string/festival"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="88dp" />

            <Button
                android:id="@+id/cafe"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/transparente"
                android:text="@string/cafe"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="88dp" />
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>