<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/riox"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#42000000"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/circulo_imagen"
            app:srcCompat="@drawable/logo_login" />

        <EditText
            android:id="@+id/mailx"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sombra_txt"
            android:hint="@string/textCorreo"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contraseñax"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/sombra_txt"
            android:hint="@string/textClave"
            android:inputType="textPassword"
            android:password="true"
            android:textColor="#0C0B0B"
            android:textColorHint="#0C0B0B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailx" />
        <TextView
            android:id="@+id/restablecerx"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:onClick="Restablecerx"
            android:text="@string/olvidoPass"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logear" />

        <Button
            android:id="@+id/logear"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boton_redondo"
            android:onClick="buscarDatos"
            android:text="@string/iniciarSesion"
            android:textColor="#ffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <Button
            android:id="@+id/registrarse"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:onClick="registro"
            android:background="@drawable/boton_solo_borde"
            android:text="Registrarse"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
            tools:ignore="MissingConstraints" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>